--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -11,59 +11,70 @@
 
     <ImageView
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="248dp"
+        android:contentDescription="@string/app_name"
         android:src="@drawable/logo" />
 
+    <!--App name-->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fontFamily="monospace"
-
         android:text="@string/app_name"
         android:textAlignment="center"
         android:textColor="@color/sun"
-        android:textSize="30dp" />
+        android:textSize="30sp" />
 
+    <!--Login label-->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/login_username"
-        android:textSize="20dp"
+        android:textSize="20sp" />
 
-        />
     <!--Login input-->
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/border"
         android:inputType="text"
-        android:hint="User name"
-        />
+        android:hint="@string/enter_your_username"/>
 
     <Space
         android:layout_width="match_parent"
-        android:layout_height="25dp"        />
+        android:layout_height="25sp" />
 
+    <!--Password label-->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/login_password"
-        android:textSize="20dp" />
+        android:textSize="20sp" />
 
+    <!--Password input-->
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:drawableTintMode="multiply"
+      android:hint="@string/enter_your_password"
         android:inputType="numberPassword" />
 
+    <!--Login button-->
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:backgroundTintMode="screen"
         android:text="@string/btn_login"
         android:textColor="@color/sun" />
 
-
+    <!--Forgot password label-->
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:focusableInTouchMode="true"
+        android:clickable="true"
+        android:layout_marginTop="20sp"
+        android:textAlignment="center"
+        android:text="@string/forgot_password"
+        android:textSize="20sp" />
 
 
 </LinearLayout>
