--- a/app/src/main/res/layout/row_item.xml
+++ b/app/src/main/res/layout/row_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/light_blue"
@@ -7,56 +8,57 @@
     android:padding="10dp">
 
 
+    <Button
+        android:id="@+id/edit_btn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+
+        android:layout_marginLeft="150dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="5dp"
+        android:text="Edit" />
+
+    <Button
+        android:id="@+id/delete_btn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/edit_btn"
+        android:layout_marginLeft="150dp"
+        android:text="Delete" />
+
+
     <TextView
         android:id="@+id/id_txt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_row="0"
-        android:layout_columnWeight="1"
-        android:layout_marginLeft="10dp"
-        android:column="1"
+
+
         android:text="id"
         android:textColor="@color/black"
         android:textSize="32dp" />
 
     <TextView
-        android:id="@+id/country_txt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_row="0"
-        android:layout_columnWeight="1"
-        android:layout_below="@id/id_txt"
-        android:layout_marginLeft="10dp"
-        android:layout_marginEnd="0dp"
-        android:column="1"
-        android:text="country"
-        android:textColor="@color/black"
-        android:textSize="20dp" />
-
-    <TextView
         android:id="@+id/degrees_txt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_row="0"
-        android:layout_columnWeight="1"
-        android:layout_below="@id/country_txt"
-        android:layout_marginLeft="10dp"
-        android:layout_marginEnd="0dp"
-        android:column="1"
+        android:layout_below="@id/id_txt"
+
         android:text="degrees"
         android:textColor="@color/sun"
         android:textSize="20dp" />
 
-    <Button
-        android:id="@+id/edit_btn"
+    <TextView
+        android:id="@+id/country_txt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="100dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginRight="10dp"
-        android:text="Edit"
+        android:layout_below="@id/degrees_txt"
 
-        />
+
+        android:layout_marginTop="8dp"
+
+        android:text="country"
+        android:textColor="@color/black"
+        android:textSize="20dp" />
 
 
 </RelativeLayout>
